<resources>
    <string name="app_name">Kyosk</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="my_cart">My cart</string>
    <string name="payments">Payment</string>
    <string name="more">More</string>
    <string name="product_image">Product Image</string>
    <string name="view_all">View all</string>
    <string name="currency_kes">Kes %1$d</string>
    <string name="back_button">Back button</string>
</resources>